--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,4 +13,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Mana",DevComment="Amount of Mana a player has")
 +GameplayTagList=(Tag="Attributes.Vital.MaxHealth",DevComment="Players\' Max Health")
 +GameplayTagList=(Tag="Attributes.Vital.MaxMana",DevComment="Players\' Max Mana")
++GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
++GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
++GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
++GameplayTagList=(Tag="Message.ManaPotion",DevComment="")
 
