Attribute Tags Native

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -61,6 +61,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/arpg_0908")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/arpg_0908")
+AssetManagerClassName=/Script/arpg_0908.ArpgAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
