Global override for EffectContextHandle

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,3 +4,6 @@
 ProjectID=C280D5DD4B004AF835300798D0B159DE
 CopyrightNotice=Copyright Tinzie Games
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
++AbilitySystemGlobalsClassName="/Script/arpg_0908.ArpgAbilitySystemGlobals"
+
