--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,6 +8,7 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Event.Montage.Enemy.Goblin.Attack",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Firebolt",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Hook",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
