Head swap works over the network

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -138,3 +138,4 @@ bForceRebuildOnLoad=True
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/arpg_0908.AarpgCharacterBase.UpdateHookPullTarget",NewName="/Script/arpg_0908.AarpgCharacterBase.UpdateTraverseTarget")
++ClassRedirects=(OldName="/Script/arpg_0908.HeadInfo",NewName="/Script/arpg_0908.HeadData")
