--- a/arpg_0908.uproject
+++ b/arpg_0908.uproject
@@ -47,6 +47,10 @@
 		{
 			"Name": "GizmoEdMode",
 			"Enabled": true
+		},
+		{
+			"Name": "OnlineSubsystemSteam",
+			"Enabled": true
 		}
 	]
 }
