--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/StartupMap.StartupMap
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/StartupMap.StartupMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -30,6 +30,20 @@ MinSampleRate=8000.000000
 CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+bInitServerOnClient=true
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -139,3 +153,4 @@ bForceRebuildOnLoad=True
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/arpg_0908.AarpgCharacterBase.UpdateHookPullTarget",NewName="/Script/arpg_0908.AarpgCharacterBase.UpdateTraverseTarget")
 +ClassRedirects=(OldName="/Script/arpg_0908.HeadInfo",NewName="/Script/arpg_0908.HeadData")
+
