--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,3 +1,4 @@
+;METADATA=(Diff=true, UseCommands=true)
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -5,9 +6,11 @@ ClearInvalidTags=False
 AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
+bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Event.Montage.Electrocute",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Firebolt",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Hook",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
