--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,6 +13,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Montage.Electrocute",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Firebolt",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Hook",DevComment="")
++GameplayTagList=(Tag="GameplayCue.ShockBurst",DevComment="")
++GameplayTagList=(Tag="GameplayCue.ShockLoop",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
 +GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
