--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -13,6 +14,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Montage.Electrocute",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Firebolt",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Hook",DevComment="")
++GameplayTagList=(Tag="GameplayCue.ElectrocuteWithFriends",DevComment="")
++GameplayTagList=(Tag="GameplayCue.HaloOfProtection",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ShockBurst",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ShockLoop",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
