--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,9 +9,12 @@ AllowGameTagUnloading=False
 FastReplication=False
 bDynamicReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="Event.Montage.CryFallComplete",NewTagName="Event.Montage.BM_CryFallComplete")
++GameplayTagRedirects=(OldTagName="Event.Montage.BM_CryFallComplete",NewTagName="Event.Montage.Enemy.BM.CryFallComplete")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Montage.Electrocute",DevComment="")
++GameplayTagList=(Tag="Event.Montage.Enemy.BM.CryFallComplete",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Firebolt",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Hook",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ElectrocuteWithFriends",DevComment="")
