Player Ready Count, IntroMap

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@ net.MaxRPCPerNetUpdate=10
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/DarkMap.DarkMap
+GameInstanceClass=/Game/Blueprints/Game/BP_ArpgGameInstance.BP_ArpgGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
