--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -105,6 +105,7 @@ bSkipMovies=False
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +MapsToCook=(FilePath="DarkMap")
 +MapsToCook=(FilePath="MainMenu")
++MapsToCook=(FilePath="IntroMap")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
