simmy simmy, and default.ini

--- a/arpg_0908.uproject
+++ b/arpg_0908.uproject
@@ -51,6 +51,10 @@
 		{
 			"Name": "OnlineSubsystemSteam",
 			"Enabled": true
+		},
+		{
+			"Name": "NiagaraFluids",
+			"Enabled": true
 		}
 	]
 }
