spin throw spin throw spin throw

--- a/arpg_0908.uproject
+++ b/arpg_0908.uproject
@@ -55,6 +55,14 @@
 		{
 			"Name": "NiagaraFluids",
 			"Enabled": true
+		},
+		{
+			"Name": "AnimatorKit",
+			"Enabled": true
+		},
+		{
+			"Name": "StaticMeshEditorModeling",
+			"Enabled": true
 		}
 	]
 }
