--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -160,3 +160,6 @@ bForceRebuildOnLoad=True
 +FunctionRedirects=(OldName="/Script/arpg_0908.AarpgCharacterBase.UpdateHookPullTarget",NewName="/Script/arpg_0908.AarpgCharacterBase.UpdateTraverseTarget")
 +ClassRedirects=(OldName="/Script/arpg_0908.HeadInfo",NewName="/Script/arpg_0908.HeadData")
 
+[/Script/Engine.PhysicsSettings]
+SolverOptions=(PositionIterations=8,VelocityIterations=2,ProjectionIterations=1,CollisionMarginFraction=0.050000,CollisionMarginMax=10.000000,CollisionCullDistance=3.000000,CollisionMaxPushOutVelocity=1000.000000,CollisionInitialOverlapDepenetrationVelocity=-1.000000,ClusterConnectionFactor=1.000000,ClusterUnionConnectionType=DelaunayTriangulation,bGenerateCollisionData=True,CollisionFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinImpulse=0.000000),bGenerateBreakData=True,BreakingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000),bGenerateTrailingData=True,TrailingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000))
+
