Its Clobbering Time <3 but for real this time

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -21,6 +21,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.HaloOfProtection",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ShockBurst",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ShockLoop",DevComment="")
++GameplayTagList=(Tag="GameplayCue.SpeechText",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
 +GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
