--- a/arpg_0908.uproject
+++ b/arpg_0908.uproject
@@ -63,6 +63,10 @@
 		{
 			"Name": "StaticMeshEditorModeling",
 			"Enabled": true
+		},
+		{
+			"Name": "WaveformEditor",
+			"Enabled": true
 		}
 	]
 }
