fixing Text Synchronisation across clients on spawn

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -16,6 +16,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.Charge",DevComment="")
 +GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.PassiveCry",DevComment="")
 +GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.Transform",DevComment="")
++GameplayTagList=(Tag="Abilities.PlayerInteraction.Spawn",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Electrocute",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Enemy.BM.CryFallComplete",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Firebolt",DevComment="")
@@ -29,4 +30,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
 +GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
 +GameplayTagList=(Tag="Message.ManaPotion",DevComment="")
++GameplayTagList=(Tag="StatusEffect.Buff.BabyMaybe.TearProtection",DevComment="")
 
