CooldownOnSuccesss, FireBreath first pass

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,5 +1,4 @@
 ;METADATA=(Diff=true, UseCommands=true)
-
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -15,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagRedirects=(OldTagName="Event.Montage.BM_CryFallComplete",NewTagName="Event.Montage.Enemy.BM.CryFallComplete")
 +GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.BabyDash",DevComment="")
 +GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.Charge",DevComment="")
++GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.FireBreath",DevComment="")
 +GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.PassiveCry",DevComment="")
 +GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.Transform",DevComment="")
 +GameplayTagList=(Tag="Abilities.PlayerInteraction.Spawn",DevComment="")
