--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -17,6 +18,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.FireBreath",DevComment="")
 +GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.PassiveCry",DevComment="")
 +GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.Transform",DevComment="")
++GameplayTagList=(Tag="Abilities.Enemy.Charles.BodySlam",DevComment="")
 +GameplayTagList=(Tag="Abilities.PlayerInteraction.Spawn",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Electrocute",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Enemy.BM.CryFallComplete",DevComment="")
