Steam changes for 5.6

--- a/arpg_0908.uproject
+++ b/arpg_0908.uproject
@@ -66,6 +66,14 @@
 		{
 			"Name": "PhysicsControl",
 			"Enabled": true
+		},
+		{
+			"Name": "SteamSockets",
+			"Enabled": true
+		},
+		{
+			"Name": "SocketSubsystemSteamIP",
+			"Enabled": true
 		}
 	]
 }
