--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -20,6 +20,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Abilities.Enemy.BebeMebe.Transform",DevComment="")
 +GameplayTagList=(Tag="Abilities.Enemy.Charles.BodySlam",DevComment="")
 +GameplayTagList=(Tag="Abilities.PlayerInteraction.Spawn",DevComment="")
++GameplayTagList=(Tag="Abilities.Summon.HealingPylon",DevComment="")
++GameplayTagList=(Tag="Abilities.Summonable.HealingPylon.Heal",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Electrocute",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Enemy.BM.CryFallComplete",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Firebolt",DevComment="")
