WIP healyharold the wellness wart

--- a/arpg_0908.uproject
+++ b/arpg_0908.uproject
@@ -74,6 +74,10 @@
 		{
 			"Name": "SocketSubsystemSteamIP",
 			"Enabled": true
+		},
+		{
+			"Name": "SkeletalMeshMorphTargetEditingTools",
+			"Enabled": true
 		}
 	]
 }
