Despawns for Temporary Characters (Harold)

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -21,6 +21,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Abilities.Enemy.Charles.BodySlam",DevComment="")
 +GameplayTagList=(Tag="Abilities.PlayerInteraction.Spawn",DevComment="")
 +GameplayTagList=(Tag="Abilities.Summon.HealingPylon",DevComment="")
++GameplayTagList=(Tag="Abilities.Summonable.DurationOver",DevComment="")
 +GameplayTagList=(Tag="Abilities.Summonable.HealingPylon.Heal",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Electrocute",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Enemy.BM.CryFallComplete",DevComment="")
