Tear Protection FX in-play

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -32,6 +32,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.ShockBurst",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ShockLoop",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.SpeechText",DevComment="")
++GameplayTagList=(Tag="GameplayCue.TearProtection",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
 +GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
