Rawb-Hug-Save beam and bubble implemented, but need to sort the animations

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -29,6 +29,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Montage.Hook",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ElectrocuteWithFriends",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.HaloOfProtection",DevComment="")
++GameplayTagList=(Tag="GameplayCue.HugBeam",DevComment="")
++GameplayTagList=(Tag="GameplayCue.HugBubble",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ShockBurst",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ShockLoop",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.SpeechText",DevComment="")
